# pckt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: backend.yml
backend/: .env.example  Cargo.toml  fly.toml
backend/migrations/: 20260425000000_init.sql  20260426000000_indexer_cursor.sql  20260427000000_block_hashes.sql  20260427100000_messages.sql  20260430000000_events_claimer_index.sql  20260430010000_sender_profiles.sql
backend/src/: bus.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
backend/src/ckb/: mod.rs  rpc.rs
backend/src/db/: blocks.rs  cursor.rs  mod.rs  packets.rs  profiles.rs  shortlinks.rs
backend/src/indexer/: mod.rs  runner.rs
backend/src/routes/: events.rs  healthz.rs  links.rs  messages.rs  mod.rs  packets.rs  prices.rs  profiles.rs  relay.rs
backend/tests/: api.rs  indexer.rs  reorg.rs
contract/: Cargo.toml  deployments.testnet.json
contract/.cargo/: config.toml
contract/pckt-lock/: Cargo.toml
contract/pckt-lock/src/: main.rs
contract/pckt-schema/: Cargo.toml  build.rs  schema.mol
contract/pckt-schema/src/: lib.rs
contract/tests/: Cargo.toml
contract/tests/src/: lib.rs
contract/tests/tests/: integration.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  config.ts  errors.ts  locale.ts  main.tsx  molecule.ts  packets.ts  tx.ts
frontend/src/components/: NotificationsPanel.tsx  Packet.tsx
frontend/src/components/brand/: LockupHorizontal.tsx  PacketMark.tsx  Wordmark.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: Alert.tsx  Avatar.tsx  Button.tsx  Chip.tsx  Icon.tsx  IconBtn.tsx  Toast.tsx
frontend/src/hooks/: useNotifications.ts  useWallet.tsx
frontend/src/screens/: Activity.tsx  Claim.tsx  CreateAmount.tsx  CreateReview.tsx  CreateShare.tsx  CreateType.tsx  Home.tsx  Inbox.tsx  Landing.tsx  Profile.tsx
frontend/src/styles/: app.css  tokens.css
scripts/: devnet.sh
shared/pckt-types/: Cargo.toml
shared/pckt-types/src/: lib.rs
