[workspace]
resolver = "2"
members = ["backend", "shared/pckt-types"]
exclude = ["frontend"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Robaire <robaireth@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
