[package]
name = "pckt-lock"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pckt-lock"
path = "src/main.rs"

[dependencies]
ckb-std = "0.18"
pckt-schema = { path = "../pckt-schema" }
molecule = { version = "0.8", default-features = false }
blake2b-ref = "0.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }
