[package]
name = "pckt-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
molecule = { version = "0.8", default-features = false }

[build-dependencies]
codegen = { package = "molecule-codegen", version = "0.8" }
