[package]
name = "pckt-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "floor"
path = "src/bin/floor.rs"

[[bin]]
name = "encode"
path = "src/bin/encode.rs"

[[bin]]
name = "addr"
path = "src/bin/addr.rs"

[dependencies]
ckb-testtool = "0.13"
pckt-schema = { path = "../pckt-schema" }
molecule = { version = "0.8" }
hex = "0.4"
bech32 = "0.11"

[dev-dependencies]
ckb-testtool = "0.13"
pckt-schema = { path = "../pckt-schema" }
molecule = { version = "0.8" }
hex = "0.4"
